src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Contract_Hyperlink__c</fullName>
        <description>Can only be used in Production</description>
        <formula>&quot;https://livongohealth2ndorg.lightning.force.com/&quot;&amp;  Contract_ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Can only be used in Production</inlineHelpText>
        <label>Contract Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID_Long__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Name_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;https://livongohealth2ndorg.lightning.force.com/&quot; + Id , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name (Hyperlink)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Path_Deprecated__c</fullName>
        <description>Place for the Contract Path relationship to be captured for each contract.</description>
        <label>Contract Path [Deprecated]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Path__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Path</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Contract Path)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_Date__c</fullName>
        <description>The date a contract is terminated with a client (or has expired and not been renewed)</description>
        <inlineHelpText>Integrated with NetSuite</inlineHelpText>
        <label>Contract Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MSA</fullName>
                </value>
                <value>
                    <fullName>Program Agreement</fullName>
                </value>
                <value>
                    <fullName>Third Party Agreement</fullName>
                </value>
                <value>
                    <fullName>Client Confirmation Schedule</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractual_Reporting_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractual Reporting Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountOfCMCA__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup Helper of all CMC Associations on Program Overview</description>
        <label>CountOfCMCA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cross_sell_Recruitment_Began_Date__c</fullName>
        <label>Cross-sell Recruitment Began Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentUser_CIM__c</fullName>
        <formula>IF(  CIM__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CIM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomPGType__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Performance Guarantee Type: Custom</description>
        <inlineHelpText>Integrated with NetSuite</inlineHelpText>
        <label>Custom PG Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Claims_Configuration__c</fullName>
        <inlineHelpText>Enter the custom claim config separated by semicolon with no space (&apos;null&apos; if not applicable): Device;Procedure Code;Place Of Service;Procedure Modifier</inlineHelpText>
        <label>Custom Claims Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPPId__c</fullName>
        <label>DPP Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Privacy_and_Security_Reqs_In_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents the security exhibit that is part of the contract</description>
        <inlineHelpText>Represents the security exhibit that is part of the contract</inlineHelpText>
        <label>Data Privacy and Security Reqs In Place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Reconciliation_Action_Items__c</fullName>
        <label>Data Reconciliation Action Items</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIM to correct or confirm Covered Lives/RPwD estimates</fullName>
                </value>
                <value>
                    <fullName>CIM to get additional email data</fullName>
                </value>
                <value>
                    <fullName>CIM to get additional medical claims data</fullName>
                </value>
                <value>
                    <fullName>CIM to verify we have data from all health systems</fullName>
                </value>
                <value>
                    <fullName>Sales to correct or confirm Covered Lives/RPwD estimates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Reconciliation_Status__c</fullName>
        <label>Data Reconciliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved - Client had Large Employee Event</fullName>
                </value>
                <value>
                    <fullName>Resolved - Contract-Related Restrictions</fullName>
                </value>
                <value>
                    <fullName>Resolved - Corrected</fullName>
                </value>
                <value>
                    <fullName>Resolved - Pilot Population</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Sharing_Agreement_in_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that a Data Sharing Agreement is in place covering this client</description>
        <inlineHelpText>If checked, indicates that a Data Sharing Agreement is in place covering this client</inlineHelpText>
        <label>Data Sharing Agreement in Place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Sharing_Stipulations__c</fullName>
        <label>Data Sharing Stipulations</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Completed_By_Legal__c</fullName>
        <description>time stamps when updates are made by SpringCM</description>
        <label>Date Completed By Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Enrollment_Cap_Reached__c</fullName>
        <label>Date Enrollment Cap Reached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Marketing_Put_On_Hold__c</fullName>
        <label>Date Marketing Put On Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Notice_for_Term_for_Convenience__c</fullName>
        <label>Days Notice for Term for Convenience</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Notice_for_Termination__c</fullName>
        <label>Days Notice for Termination</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographics_of_population__c</fullName>
        <description>Cultural attributes, socioeconomic status, locations, hourly vs salary, jobs of employees.</description>
        <inlineHelpText>Cultural attributes, socioeconomic status, locations, hourly vs salary, jobs of employees.</inlineHelpText>
        <label>Demographics of population</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Invoice_Recipients__c</fullName>
        <description>Only email addresses are allowed in this field, separated by commas only.</description>
        <inlineHelpText>Only email addresses are allowed in this field, separated by commas only.</inlineHelpText>
        <label>Detailed Invoice Recipient(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Invoice_Tags__c</fullName>
        <description>If a client has requested a custom detailed invoice with additional tags, please list the tag fields here seperated by a comma</description>
        <inlineHelpText>If a client has requested a custom detailed invoice with additional tags, please list the tag fields here seperated by a comma</inlineHelpText>
        <label>Detailed Invoice Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detailed Invoice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiabetesId__c</fullName>
        <label>Diabetes Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated with NetSuite and Redshift</description>
        <inlineHelpText>Integrated with NetSuite and Redshift</inlineHelpText>
        <label>Direct Mail Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_BH_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable BH Coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_BH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable BH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disclaimer_DM_HTN__c</fullName>
        <description>The disclaimer language for marketing materials targeting individuals with both Diabetes and Hypertension</description>
        <inlineHelpText>The disclaimer language for marketing materials targeting individuals with both Diabetes and Hypertension</inlineHelpText>
        <label>Disclaimer DM + HTN</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <description>This is the disclaimer used for Enrollment Marketing purposes across multiple programs.</description>
        <label>Disclaimer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use_Provided_Email_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enrollment Marketing - Client Overview</description>
        <label>Do Not Use Provided Email Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Downmarket__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Note:  Jenga #1398(Black Panther) - Downmarket checkbox is replaced with Population Type on CO.  This is depreciated field and will be deleted in future sprint
Used to easily identify which Client Overview records are associated with Downmarket clients in reporting</description>
        <label>Downmarket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EML__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Marketing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Overviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eligibility_Escalation_Path__c</fullName>
        <description>Articulates escalation rules (if any) so the eligibility team knows what to do if they are unable to verify eligibility</description>
        <label>Eligibility Escalation Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Escalation</fullName>
                </value>
                <value>
                    <fullName>Escalate to PBM</fullName>
                </value>
                <value>
                    <fullName>Escalate to CSM</fullName>
                </value>
                <value>
                    <fullName>Escalate to Defined Contact (Provide Details)</fullName>
                </value>
                <value>
                    <fullName>Check ESI Portal</fullName>
                </value>
                <value>
                    <fullName>Complex Escalation (Provide Details)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Exceptions_Rules__c</fullName>
        <description>Please include details for any exceptions or rules that deviate from the standard eligibility verification method.</description>
        <inlineHelpText>Please include details for any exceptions or rules that deviate from the standard eligibility verification method.</inlineHelpText>
        <label>Eligibility Exceptions/Rules</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_File_Cadence__c</fullName>
        <description>The cadence that eligibility files will be delivered</description>
        <inlineHelpText>The cadence that eligibility files will be delivered</inlineHelpText>
        <label>Eligibility File Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Sentence_DM_HTN__c</fullName>
        <description>The eligibility sentence for marketing materials targeting individuals with both Diabetes and Hypertension</description>
        <inlineHelpText>The eligibility sentence for marketing materials targeting individuals with both Diabetes and Hypertension</inlineHelpText>
        <label>Eligibility Sentence DM + HTN</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Sentence__c</fullName>
        <description>This is the Eligibility Sentence used for Enrollment Marketing across multiple programs.</description>
        <label>Eligibility Sentence</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Team_Notes__c</fullName>
        <description>For Eligibility team to track additional details/notes that don&apos;t fit into any of the predefined Eligibility fields</description>
        <inlineHelpText>For Eligibility team to track additional details/notes that don&apos;t fit into any of the predefined Eligibility fields</inlineHelpText>
        <label>Eligibility Team Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Verification_Method__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Eligibility Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Elig_API_Recruitable_OR_Group_ID</fullName>
                    <label>Elig API + (Recruitable OR Group ID)</label>
                </value>
                <value>
                    <fullName>Eligible API</fullName>
                </value>
                <value>
                    <fullName>Eligible API + Reverse Eligibility (FTP)</fullName>
                </value>
                <value>
                    <fullName>Eligible API-Allowed Member IDs</fullName>
                </value>
                <value>
                    <fullName>Eligible API-Exclude Dependents</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Benefit Manager</fullName>
                </value>
                <value>
                    <fullName>Reverse Eligibility (FTP)</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_or_Census_Data_Grade__c</fullName>
        <label>Eligibility or Census Data Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
                <value>
                    <fullName>C-</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Not Graded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Group_IDs__c</fullName>
        <description>List INCLUDED Group IDs only. If entering multiple Group IDs please separate with semicolons.</description>
        <inlineHelpText>List INCLUDED Group IDs only. If entering multiple Group IDs please separate with semicolons.</inlineHelpText>
        <label>Eligible Group IDs</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Member_Communication_Method__c</fullName>
        <label>Eligible Member Communication Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Access__c</fullName>
        <label>Email Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Personal and Work</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Notification_of_sFTP_Upload__c</fullName>
        <label>Email Notification of sFTP Upload</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Title__c</fullName>
        <label>Employee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_in_Livongo_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the client or a contractual partner receives reports from Livongo</description>
        <inlineHelpText>Indicates if the client or a contractual partner receives reports from Livongo</inlineHelpText>
        <label>Enrolled in Livongo Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_in_PartnerStandard_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled in Partner-Standard Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enrollment Marketing - Client Overview</description>
        <label>Enrollment Marketing Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Conversation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enrollment Marketing - Client Overview</description>
        <label>Enrollment Marketing Conversation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Customizations__c</fullName>
        <description>Describes any Enrollment Marketing customizations, exceptions or special handling</description>
        <inlineHelpText>Enrollment Marketing customizations, exceptions or special handling</inlineHelpText>
        <label>Enrollment Marketing Customizations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Contact__c</fullName>
        <description>If &quot;Escalate to Defined Contact&quot; is chosen as the Eligibility Escalation Path, you must provide the contact info.</description>
        <inlineHelpText>If &quot;Escalate to Defined Contact&quot; is chosen as the Eligibility Escalation Path, you must provide the contact info.</inlineHelpText>
        <label>Escalation Contact</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Details__c</fullName>
        <description>If &quot;Complex Escalation&quot; is chosen as the Eligibility Escalation Path, you must provide the specific escalation details</description>
        <inlineHelpText>If &quot;Complex Escalation&quot; is chosen as the Eligibility Escalation Path, you must provide the specific escalation details</inlineHelpText>
        <label>Complex Escalation Details</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Close_Date__c</fullName>
        <label>Fast Start Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Credit_Offered__c</fullName>
        <description>Required in SpringCM; used to indicate whether Fast Start Credit applies. If so, users will be required to populate the Fast Start Credit fields.</description>
        <inlineHelpText>Required in SpringCM; used to indicate whether Fast Start Credit applies. If so, users will be required to populate the Fast Start Credit fields.</inlineHelpText>
        <label>Fast Start Credit Offered?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fast_Start_Credit_Offered_old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Start Credit Offered? (OLD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Credit_Type__c</fullName>
        <label>Fast Start Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-time ($X,XXX credit or $X PPPM credit)</fullName>
                </value>
                <value>
                    <fullName>Recurring (credit of $X PPPM)</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fast_Start_Custom__c</fullName>
        <label>Fast Start Custom</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Launch_Date__c</fullName>
        <label>Fast Start Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Participation_Rate_Date_Met__c</fullName>
        <label>Fast Start Participation Rate Date Met</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Participation_Rate__c</fullName>
        <label>Fast Start Participation Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Award__c</fullName>
        <label>Frequency of Award</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Disclaimer__c</fullName>
        <description>General Disclaimer information to be used on assets promoting Whole Person solutions or multiple standalone programs</description>
        <inlineHelpText>General Disclaimer information to be used on assets promoting Whole Person solutions or multiple standalone programs</inlineHelpText>
        <label>General Disclaimer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Eligibility_Sentence__c</fullName>
        <description>General Eligibility Sentence information to be used on assets promoting Whole Person solutions or multiple standalone programs</description>
        <inlineHelpText>General Eligibility Sentence information to be used on assets promoting Whole Person solutions or multiple standalone programs</inlineHelpText>
        <label>General Eligibility Sentence</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Global_NDA_in_place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global NDA in place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goals_for_Livongo__c</fullName>
        <description>How client measures success and metrics they want to reach?</description>
        <inlineHelpText>How client measures success and metrics they want to reach?</inlineHelpText>
        <label>Goals for Livongo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIPAA_Covered_Entity__c</fullName>
        <label>HIPAA Covered Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Communications__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>HR Communications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HR Announcement</fullName>
                </value>
                <value>
                    <fullName>HR Reminder</fullName>
                </value>
                <value>
                    <fullName>Ongoing HR Message 1x/year</fullName>
                </value>
                <value>
                    <fullName>Ongoing HR Message 2x/year</fullName>
                </value>
                <value>
                    <fullName>Ongoing HR Message 3x/year</fullName>
                </value>
                <value>
                    <fullName>Ongoing HR Message 4x/year</fullName>
                </value>
                <value>
                    <fullName>Hybrid HR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSS_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HSS Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Benefit_Alt_Text__c</fullName>
        <description>Client preferred alternative to mention of &quot;health benefit&quot; in assets.</description>
        <inlineHelpText>Client preferred alternative to mention of &quot;health benefit&quot; in assets.</inlineHelpText>
        <label>Health Benefit Alt Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_System_Data_Grade__c</fullName>
        <label>Health System Data Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
                <value>
                    <fullName>C-</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Not Graded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hold_All_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Hold All Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Member_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Member Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HypertensionId__c</fullName>
        <label>Hypertension Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identification_Responsibility__c</fullName>
        <description>Indicates who is responsible for identifying eligible members</description>
        <inlineHelpText>Indicates who is responsible for identifying eligible members</inlineHelpText>
        <label>Identification Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Livongo</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_API_Start_Date__c</fullName>
        <label>Incentive API Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentive_Criteria__c</fullName>
        <description>Integrated with Redshift</description>
        <inlineHelpText>Integrated with Redshift</inlineHelpText>
        <label>Incentive Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName># Checks</fullName>
                </value>
                <value>
                    <fullName>Enroll</fullName>
                </value>
                <value>
                    <fullName>Activate</fullName>
                </value>
                <value>
                    <fullName># Days Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentives_API_Partner__c</fullName>
        <label>Incentives API Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Welltok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>